--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-189.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-263.4KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 伊朗-2.15MB/s(Youtube:不良林), server: mci.myandroidplus1.ir, port: 80, type: vmess, uuid: c1214c26-f0fc-2f0a-81b0-84d10f8d14dc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api, ws-headers: {Host: mci.myandroidplus1.ir}}
-  - {name: 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-706.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 伊朗-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
