--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-706.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-906.4KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-2.86MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-706.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-768.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇬🇧 英国-906.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-986.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
