--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: zh01lv5hk07.feiguayun.xyz, port: 31087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: zh01lv5hk04.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.92MB/s(Youtube:不良林), server: zh01lv5jp01.feiguayun.xyz, port: 32087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
   - {name: 🇨🇳 中国-251.1KB/s(Youtube:不良林), server: zh01lv5uk01.feiguayun.xyz, port: 35087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 未知国家-1.78MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: zh01lv5hk07.feiguayun.xyz, port: 31087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
+  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: zh01lv5hk04.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
   - {name: 🇨🇳 中国-504.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-531.6KB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
   - {name: 🇨🇳 中国-477.1KB/s(Youtube:不良林), server: zh01lv5jp02.feiguayun.xyz, port: 32087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
   - {name: 🇨🇳 中国-583.1KB/s(Youtube:不良林), server: zh01lv5hk03.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 未知国家-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-531.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
 rules:
